--- a/src/app/paciente/paciente-list/paciente-list.component.css
+++ b/src/app/paciente/paciente-list/paciente-list.component.css
@@ -7,9 +7,11 @@
     margin-top: 50px;
   }
   
-  .table-title, table {
+  .table-and-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     width: 50%;
-    margin: 0 auto;
   }
   
   .table-title {
@@ -18,10 +20,13 @@
     padding: 10px;
     text-align: center;
     font-size: 20px;
+    width: 50%;
+    margin: 0 auto;
   }
   
   table {
     border-collapse: collapse;
+    width: 100%;
   }
   
   table th, table td {
@@ -32,4 +37,10 @@
   
   table tbody tr:nth-child(even) {
     background-color: #f2f2f2;
+  }
+  
+  p {
+    text-align: left;
+    font-weight: bold;
+    margin-top: 20px;
   }
