detail no completo

--- a/src/app/paciente/paciente-detail/paciente-detail.component.html
+++ b/src/app/paciente/paciente-detail/paciente-detail.component.html
@@ -1,3 +1,7 @@
-<p>
-  paciente-detail works!
-</p>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">{{PacienteDetail.nombre}}</h5>
+    <p class="card-text">Edad: {{PacienteDetail.edad}}</p>
+    <p class="card-text">Diagnóstico: {{PacienteDetail.diagnostico}}</p>
+  </div>
+</div>
